# DecafCompiler2

./: CMakeLists.txt  genasmnotes.txt
src/: decaf_ast.tc  decaf_cfg.h  decaf_lexer.h  decaf_lexer.l  decaf_parser.y  decaf_x86gen.cpp  decaf_x86gen.h  funcdef.h  lexer.h  main.cpp
test-cases/: ArithOperators.decaf  HelloWorld.decaf  IfTest.decaf  RelOperators.decaf  SelectionSort.decaf  gcd.decaf  out.asm  runtests.sh
test-cases/output/: ArithOperators.decaf.txt  ForTest.decaf.txt  IfTest.decaf.txt  RelOperators.decaf.txt
test-cases/t/: ArrayTest.decaf  ForTest.decaf  WhileTest.decaf  factorial.decaf  gcd.decaf
test-cases/temp/: ArithOperators.decaf  ArithOperators.decaf.asm  ForTest.decaf  ForTest.decaf.asm  HelloWorld.decaf  HelloWorld.decaf.asm  IfTest.decaf  IfTest.decaf.asm  RelOperators.decaf
tests/: tmp.dcf
